fixes bug 139817 "M1RC1 topcrash [@ nsHttpChannel::OnStartRequest]" r=gordon sr=jst